<resources>
    <string name="_continue">Continue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accessibility_change_security_dialog_message">An accessibility service has been activated. It watches keyboard and windows.</string>
    <string name="accessibility_security_dialog_message">An accessibility service is active. It watches keyboard and windows.</string>
    <string name="account_email_already_used_error">This email address is already in use.</string>
    <string name="account_email_not_found_error">This email address was not found.</string>
    <string name="account_email_validation_error">Unable to verify email address. Please check your email and click on the link it contains. Once this is done, click continue.</string>
    <string name="account_email_validation_message">Please check your email and click on the link it contains. Once this is done, click continue.</string>
    <string name="account_email_validation_title">Verification Pending</string>
    <string name="account_phone_number_already_used_error">This phone number is already in use.</string>
    <string name="action_close">Close</string>
    <string name="action_edit_contact_form">Edit contact form</string>
    <string name="action_exit">Exit</string>
    <string name="action_forbidden">You are not authorized to perform this action</string>
    <string name="action_global_search">Global search</string>
    <string name="action_historical">Historical</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_not_available_yet">This action is not available yet</string>
    <string name="action_open">Open</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_confirmation">For security, logging out will delete any end-to-end encryption keys making previous encrypted chat history unreadable if you log back in.\10Select export to backup them before signing out.</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="actions">Actions</string>
    <string name="active_call">Active call</string>
    <string name="add">Add</string>
    <string name="an_update_is_available_critical">A new version is available, for security reason please update your application first</string>
    <string name="an_update_is_available_ignore">Ignore</string>
    <string name="an_update_is_available_info">A new version is available!</string>
    <string name="an_update_is_available_later">Later</string>
    <string name="an_update_is_available_mandatory">A new version is available, please update your application</string>
    <string name="an_update_is_available_upgrade_button">Open the PlayStore</string>
    <string name="an_update_is_available_upgrade_help">If your professional phone does not allow access to the PlayStore, please use the dedicated private application store to upgrade Tchap.</string>
    <string name="app_name">OlmSdk</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachment_cancel_download">Cancel the download?</string>
    <string name="attachment_cancel_upload">Cancel the upload?</string>
    <string name="attachment_remaining_time_minutes">%1$dm %2$ds</string>
    <string name="attachment_remaining_time_seconds">%d s</string>
    <string name="auth_add_email_and_phone_message">Add an email address and a phone number to your account to let users discover you.\10\10Email address will also let you reset your password.</string>
    <string name="auth_add_email_message">Add an email address to your account to let users discover you, and let you reset password.</string>
    <string name="auth_add_email_phone_message">Add an email address and/or a phone number to your account to let users discover you.\10\10Email address will also let you reset your password.</string>
    <string name="auth_add_phone_message">Add a phone number to your account to let users discover you.</string>
    <string name="auth_email_already_defined">This email address is already defined.</string>
    <string name="auth_email_placeholder">Email address</string>
    <string name="auth_email_validation_message">Please check your email to continue registration</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="auth_home_server">Home Server:</string>
    <string name="auth_identity_server">Identity Server:</string>
    <string name="auth_invalid_email">This doesn\'t look like a valid email address</string>
    <string name="auth_invalid_login_param">Incorrect username and/or password</string>
    <string name="auth_invalid_password">Password too short (min 8)</string>
    <string name="auth_invalid_phone">This doesn\'t look like a valid phone number</string>
    <string name="auth_invalid_token">Invalid token</string>
    <string name="auth_invalid_user_name">User names may only contain letters, numbers, dots, hyphens and underscores</string>
    <string name="auth_login">Log in</string>
    <string name="auth_missing_email">Missing email address</string>
    <string name="auth_missing_email_or_phone">Missing email address or phone number</string>
    <string name="auth_missing_password">Missing password</string>
    <string name="auth_missing_phone">Missing phone number</string>
    <string name="auth_new_password_placeholder">New password</string>
    <string name="auth_opt_email_placeholder">Email address (optional)</string>
    <string name="auth_opt_phone_number_placeholder">Phone number (optional)</string>
    <string name="auth_repeat_new_password_placeholder">Confirm your new password</string>
    <string name="auth_reset_password_message">To reset your password, enter the email address linked to your account:</string>
    <string name="auth_send_reset_email">Send Reset Email</string>
    <string name="encryption_export_confirm_passphrase">Confirm passphrase</string>
    <string name="encryption_export_create_passphrase">Create passphrase</string>
    <string name="encryption_export_export">Export</string>
    <string name="encryption_export_notice">Please create a passphrase to encrypt the exported keys. You will need to enter the same passphrase to be able to import the keys.</string>
    <string name="encryption_information_device_id">Device ID</string>
    <string name="encryption_information_device_key">Device key</string>
    <string name="encryption_information_device_name">Device name</string>
    <string name="encryption_information_verify_device_warning">To verify that this device can be trusted, please contact its owner using some other means (e.g. in person or a phone call) and ask them whether the key they see in their User Settings for this device matches the key below:</string>
    <string name="encryption_information_verify_device_warning2">If it matches, press the verify button below. If it doesn\'t, then someone else is intercepting this device and you should probably blacklist it. In the future this verification process will be more sophisticated.</string>
    <string name="leave">Leave</string>
    <string name="room_settings_banned_users_title">Banned users</string>
    <string name="room_settings_room_name">Room Name</string>
    <string name="room_settings_room_notifications_title">Notifications</string>
    <string name="room_settings_room_photo">Room Photo</string>
    <string name="room_settings_topic">Topic</string>
    <string name="start_message">Welcome to Tchap</string>
    <string name="tchap_connection_email">Email</string>
    <string name="tchap_connection_email_help">Use your business address</string>
    <string name="tchap_connection_forgotten_email">I have forgotten my password</string>
    <string name="tchap_connection_password">Tchap password</string>
    <string name="tchap_connection_password_confirm">Password confirmation</string>
    <string name="tchap_connection_password_help">Your password must include a lower-case letter, an upper-case letter, a number and a symbol and be at a minimum 8 characters in length.</string>
    <string name="tchap_has_account_no">I do not have\10an account</string>
    <string name="tchap_has_account_yes">I already have\10an account</string>
    <string name="tchap_room_settings_remove_from_directory">Remove this room from the rooms directory</string>
    <string name="tchap_room_settings_room_access_restricted">The externals are not allowed to join this room</string>
    <string name="tchap_room_settings_room_access_title">Additional information</string>
    <string name="tchap_unsupported_android_version_export_keys">Export keys</string>
    <string name="tchap_unsupported_android_version_message">Please log out your account from this device.\10In order to be able to decrypt your chat history when you will log in from another device, we invite you to export your encryption keys before signing out.</string>
    <string name="tchap_unsupported_android_version_title">For security reasons, Tchap is not supported anymore on Android 4.4.4 and lower</string>
</resources>