<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:paddingLeft="?attr/dialogPreferredPadding" android:paddingTop="12dp" android:paddingRight="?attr/dialogPreferredPadding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/encryption_information_verify_device_warning"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/encryption_information_device_name"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_device_info_device_name" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/encryption_information_device_id"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_device_info_device_id" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/encryption_information_device_key"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_device_info_device_key" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:textSize="12sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/encryption_information_verify_device_warning2"/>
    </LinearLayout>
</ScrollView>
