<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:src="@drawable/logo_tchap_color"/>
            <TextView android:textSize="18sp" android:textColor="@color/tchap_primary_text_color" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="40dp" android:layout_marginRight="15dp" android:text="@string/tchap_unsupported_android_version_title"/>
            <TextView android:textSize="16sp" android:textColor="@color/tchap_primary_text_color" android:id="@+id/tv_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="20dp" android:layout_marginRight="15dp" android:text="@string/tchap_unsupported_android_version_message"/>
            <Button android:textColor="@android:color/white" android:layout_gravity="end" android:id="@+id/sign_out_button" android:background="@color/vector_green_color" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:text="@string/action_sign_out"/>
            <Button android:textColor="@android:color/white" android:layout_gravity="end" android:id="@+id/export_button" android:background="@color/vector_green_color" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="20dp" android:text="@string/tchap_unsupported_android_version_export_keys"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:id="@+id/waiting_view" android:background="?attr/vctr_waiting_background_color" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <ProgressBar android:layout_gravity="center" android:id="@+id/waiting_progress" android:layout_width="60dp" android:layout_height="60dp" android:indeterminate="true"/>
    </FrameLayout>
</merge>
