<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/fragment_tchap_first_forgotten_password" android:paddingLeft="22dp" android:paddingRight="22dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/fragment_tchap_first_forget_password_notice" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/auth_reset_password_message" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/tchap_text_color_light" android:id="@+id/fragment_tchap_first_forget_password_email_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:hintTextAppearance="@style/TchapTextInputLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/fragment_tchap_first_forget_password_notice">
        <com.google.android.material.textfield.TextInputEditText android:textSize="16sp" android:textColor="@color/tchap_text_color_light" android:id="@+id/fragment_tchap_first_forget_password_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/auth_email_placeholder" android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/tchap_text_color_light" android:id="@+id/fragment_tchap_first_forget_password_new_password_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:hintTextAppearance="@style/TchapTextInputLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/fragment_tchap_first_forget_password_email_layout">
        <com.google.android.material.textfield.TextInputEditText android:textSize="16sp" android:textColor="@color/tchap_text_color_light" android:id="@+id/fragment_tchap_first_forget_password_new_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/auth_new_password_placeholder" android:ems="10" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:textSize="11sp" android:textStyle="italic" android:textColor="#a1a1a1" android:id="@+id/fragment_tchap_first_forget_password_password_help" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:text="@string/tchap_connection_password_help" android:fontFamily="sans-serif" app:layout_constraintTop_toBottomOf="@+id/fragment_tchap_first_forget_password_new_password_layout"/>
    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/tchap_text_color_light" android:id="@+id/fragment_tchap_first_forget_password_new_password_confirm_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:hintTextAppearance="@style/TchapTextInputLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/fragment_tchap_first_forget_password_password_help">
        <com.google.android.material.textfield.TextInputEditText android:textSize="16sp" android:textColor="@color/tchap_text_color_light" android:id="@+id/fragment_tchap_first_forget_password_new_password_confirm" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/auth_repeat_new_password_placeholder" android:ems="10" android:inputType="textPassword" android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:id="@+id/fragment_tchap_first_forget_password_submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/auth_send_reset_email" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/fragment_tchap_first_forget_password_new_password_confirm_layout" style="@style/TchapLoginButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
