<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/fragment_tchap_first_welcome" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="23.8sp" android:textStyle="normal" android:textColor="@color/tchap_text_color_light" android:gravity="center_horizontal" android:layout_width="200dp" android:layout_height="wrap_content" android:text="@string/start_message" android:fontFamily="sans-serif-light" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.3"/>
    <View android:id="@+id/fragment_tchap_first_welcome_separator" android:background="@color/tchap_text_color_light" android:layout_width="1dp" android:layout_height="87dp" android:layout_marginBottom="26dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/tchap_text_color_light" android:gravity="center" android:id="@+id/fragment_tchap_first_welcome_register_button" android:layout_width="0dp" android:layout_height="0dp" android:text="@string/tchap_has_account_no" android:fontFamily="sans-serif" app:layout_constraintBottom_toBottomOf="@+id/fragment_tchap_first_welcome_separator" app:layout_constraintEnd_toEndOf="@+id/fragment_tchap_first_welcome_separator" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/fragment_tchap_first_welcome_separator"/>
    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/tchap_text_color_light" android:gravity="center" android:id="@+id/fragment_tchap_first_welcome_login_button" android:layout_width="0dp" android:layout_height="0dp" android:text="@string/tchap_has_account_yes" android:fontFamily="sans-serif" app:layout_constraintBottom_toBottomOf="@+id/fragment_tchap_first_welcome_separator" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/fragment_tchap_first_welcome_separator" app:layout_constraintTop_toTopOf="@+id/fragment_tchap_first_welcome_separator"/>
</androidx.constraintlayout.widget.ConstraintLayout>
