<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/fragment_tchap_first_login" android:paddingLeft="22dp" android:paddingRight="22dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/tchap_text_color_light" android:id="@+id/tchap_first_login_email_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:hintTextAppearance="@style/TchapTextInputLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <com.google.android.material.textfield.TextInputEditText android:textSize="16sp" android:textColor="@color/tchap_text_color_light" android:id="@+id/tchap_first_login_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/tchap_connection_email" android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/tchap_text_color_light" android:id="@+id/tchap_first_login_password_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="32dp" app:hintTextAppearance="@style/TchapTextInputLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tchap_first_login_email_layout">
        <com.google.android.material.textfield.TextInputEditText android:textSize="16sp" android:textColor="@color/tchap_text_color_light" android:id="@+id/tchap_first_login_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/tchap_connection_password" android:inputType="textPassword" android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:textSize="13.5sp" android:textStyle="normal" android:textColor="@color/tchap_text_color_light" android:id="@+id/tchap_first_login_password_forgotten" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/tchap_connection_forgotten_email" android:fontFamily="sans-serif" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tchap_first_login_password_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
